--- a/EmployeePayRoll_MVC/Views/Shared/_Layout.cshtml
+++ b/EmployeePayRoll_MVC/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="GetAllEmployee">Get Employee</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="CreateEmployee">ADD Employee</a>
+                        </li>
                     </ul>
                 </div>
             </div>
