--- a/EmployeePayRoll_MVC/Views/Employee/SearchEmployee.cshtml
+++ b/EmployeePayRoll_MVC/Views/Employee/SearchEmployee.cshtml
@@ -1,12 +1,11 @@
 ﻿@model RepositoryLayer.Entity.EmployeeEntity
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "SearchEmployee";
 }
 
-<h1>Delete</h1>
+<h1>SearchEmployee</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>EmployeeEntity</h4>
     <hr />
@@ -60,10 +59,8 @@
             @Html.DisplayFor(model => model.Notes)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="GetAllEmployee">Back to List</a>
-    </form>
-
+</div>
+<div>
+    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    <a asp-action="Index">Back to List</a>
 </div>
