--- a/EmployeePayRoll_MVC/Views/Employee/GetAllEmployee.cshtml
+++ b/EmployeePayRoll_MVC/Views/Employee/GetAllEmployee.cshtml
@@ -3,6 +3,40 @@
 @{
     ViewData["Title"] = "GetAllEmployee";
 }
+<style>
+    thead,
+    tfoot {
+        background-color: #3f87a6;
+        color: #fff;
+    }
+
+    tbody {
+        background-color: #e4f0f5;
+        font-family:'Times New Roman', Times, serif;
+        font-style:normal;
+    }
+
+
+
+    table {
+        border-collapse: collapse;
+        border: 2px solid rgb(200, 200, 200);
+        letter-spacing: 1px;
+        font-family: sans-serif;
+        font-size: 0.9rem;
+    }
+
+    td,
+    th {
+        border: 1px solid rgb(190, 190, 190);
+        padding: 5px 10px;
+    }
+
+    td {
+        text-align: center;
+    }
+
+</style>
 
 <h1>Employee Details</h1>
 
@@ -44,7 +78,8 @@
             <th>
                 @Html.DisplayNameFor(model => model.Notes)
             </th>
-            <th></th>
+            <th colspan="3"></th>
+
         </tr>
     </thead>
     <tbody>
@@ -74,9 +109,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Notes)
             </td>
+            <td id="button">
+                    @Html.ActionLink("Edit", "UpdateEmp", new { empId = item.EmployeeId },new { @class="btn btn-primary"})
+                                      
+            </td>
             <td>
-                    @Html.ActionLink("Edit", "UpdateEmp", new { empId = item.EmployeeId },new { @class="btn btn-primary"}) |
-                    @Html.ActionLink("Details", "GetEmployeeDetials", new { empId = item.EmployeeId },new{ @class="btn btn-success"}) |
+                    @Html.ActionLink("Details", "GetEmployeeDetials", new { empId = item.EmployeeId }, new { @class = "btn btn-success" })
+            </td>
+            <td>
                     @Html.ActionLink("Delete", "Delete", new { empId = item.EmployeeId }, new { @class = "btn btn-danger", style = "margin-right: 5px; background-color: #dc3545; color: white;" })
             </td>
         </tr>
