--- a/EmployeePayRoll_MVC/Views/Employee/UpdateEmp.cshtml
+++ b/EmployeePayRoll_MVC/Views/Employee/UpdateEmp.cshtml
@@ -3,10 +3,38 @@
 @{
     ViewData["Title"] = "UpdateEmp";
 }
+<style>
+    .container{
+        display:flex;
+        justify-content:center;
+    }
+    .row{
+        display: flex;
+        justify-content: center;
+        border:1px solid black;
+        background-color:bisque;
+        width:600px;
+        border-radius:23px;
 
-<h1>UpdateEmp</h1>
+    }
 
-<h4>EmployeeEntity</h4>
+    .col-md-4
+    {
+        width:60%;
+        padding:25px;
+    }
+
+    h1{
+        color:cornsilk;
+        justify-content:center;
+        display:flex;
+
+    }
+
+</style>
+
+<h1>Update Employee Details</h1>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
