profile pic selection option and style applied to all the views pages

--- a/EmployeePayRoll_MVC/Views/Employee/CreateEmployee.cshtml
+++ b/EmployeePayRoll_MVC/Views/Employee/CreateEmployee.cshtml
@@ -10,6 +10,14 @@
         justify-content:space-between;
         margin:20px 0px;
     }
+
+    .footer {
+        padding: 10px;
+        position: absolute;
+        bottom: 0;
+        width: 360px;
+        color: white;
+    }
 </style>
 
 <h1>CREATE EMPLOYEE</h1>
