--- a/EmployeePayRoll_MVC/Views/Employee/GetAllEmployee.cshtml
+++ b/EmployeePayRoll_MVC/Views/Employee/GetAllEmployee.cshtml
@@ -95,6 +95,14 @@
         color:white;
     }
 
+    .footer {
+        padding: 10px;
+        position: absolute;
+        bottom: 0;
+        width: 360px;
+        color: white;
+    }
+
  
 
 </style>
